<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/old_PW_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/outline_lock_black_18"
            android:autofillHints="Please type in your old password" />

        <EditText
            android:id="@+id/new_PW_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/outline_lock_black_18"
            android:autofillHints="PLease type in your new password" />

        <EditText
            android:id="@+id/new_PW_confirmed_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmed_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/outline_lock_black_18"
            android:autofillHints="Please confirm your new password" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/forget_password"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forget_password"
            android:textAllCaps="true"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/note" />

</RelativeLayout>